static/css/components/header.css
:root {
  --header-space: var(--size-5);
  --header-height: calc((var(--header-space) * 2) + var(--button-height));
}

.Header {
  --grid-template: var(--grid-template-basic);
  background: var(--color-bg-2);
  block-size: var(--header-height);
  padding-block: var(--header-space);
  position: relative;
  z-index: 1;
}

.Header__main {
  align-items: center;
  container-name: header;
  container-type: inline-size;
  display: flex;
  gap: var(--size-3);
  justify-content: space-between;

  .Button[popovertarget='nav'] {
    --icon-scale: 1;
    justify-self: end;
  }

  @container header (inline-size >= 500px) {
    .Button[popovertarget='nav'] {
      display: none;
      --icon-scale: 1;
      justify-self: end;
    }
  }
}

.Header__logo {
  --underline-opacity: 0;
  margin-inline-end: auto;
  font-size: var(--font-size);
  font-weight: var(--font-weight-1);
  position: relative;

  &:not(:focus-visible, :hover) {
    --color: var(--color-secondary);
  }
}

.Header__tag {
  color: var(--color-bg-1);
  display: block;
  background: var(--color-primary);
  background-image: linear-gradient(
    in oklch 45deg,
    var(--color-secondary),
    var(--color-primary)
  );
  border-radius: var(--radius-2);
  font-size: var(--font-size-0);
  font-weight: var(--font-weight-2);
  inset-block-start: 0;
  inset-inline-start: calc(100% + var(--size-2));
  line-height: 1;
  padding: var(--size-1) var(--size-2);
  position: absolute;
  text-transform: uppercase;
  transform: scale(0.75);
  transform-origin: 0% 0%;
}

